tests/support/validation/invalid/run_without_blocks/crew.crw
CSC;aba11011;Weekday   ; 0;02;BUS12021  ;Albny   ;Albany Weekday REMAKE                                                           
PCE;123-1501 ;   9911631;12345  ;   4484646;    1;albny ;0405a;albny ;0415a;albny ;0919a;albny ;0919a;011;;
